--- a/reader.ipynb
+++ b/reader.ipynb
@@ -64,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "303ada28",
+   "metadata": {},
+   "source": [
+    "Importing all the essential libraries. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a200399b",
@@ -114,6 +122,14 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1be20b2",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
    ]
   },
   {
@@ -265,7 +281,8 @@
    "id": "12c61b96",
    "metadata": {},
    "source": [
-    "Building a CNN model \n",
+    "# Building a CNN model \n",
+    "\n",
     "Initialising the CNN"
    ]
   },
@@ -522,22 +539,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9de089a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b9565aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "09abdf42",
    "metadata": {},
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "624982fb",
+   "id": "14543a90",
    "metadata": {},
    "source": [
     "In the below cell I have given the chart of training and validation loss and accuracy. \n",
@@ -779,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "02bffad1",
+   "id": "dfe2458f",
    "metadata": {},
    "outputs": [
     {
@@ -913,9 +914,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "0b8e0414",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1034,17 +1033,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e801685d",
+   "cell_type": "markdown",
+   "id": "267e4f61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We have successfully constructed a convolutional neural network (CNN) model for image classification,\n",
+    "achieving an impressive F1 score of 96%.\n",
+    "Examining the image sequence classification results above, only 2 out of 10 instances were misclassified, demonstrating the robustness of our model.\n",
+    "We have also used many metrices for model evaluation such as F1 score, confusion matrix and classification report, which gives us very fine results, stating that our model is fit to use. \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1f23cb",
+   "id": "9a47d22c",
    "metadata": {},
    "outputs": [],
    "source": []
